--- a/index.html
+++ b/index.html
@@ -12,6 +12,43 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
     <title>Portfolio | AruzeKQ</title>
+
+
+    <style>
+#overlay {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    background: rgba(0, 0, 0, 0.7) !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    color: #fff !important;
+    font-size: 32px !important;
+    font-family: sans-serif !important;
+    cursor: pointer !important;
+    z-index: 999999 !important;
+    backdrop-filter: blur(5px) !important;
+
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+#overlay.hidden {
+    opacity: 0;
+    pointer-events: none; /* không chặn click */
+}
+
+#overlay .text {
+    padding: 20px 40px !important;
+    border: 2px solid #fff !important;
+    border-radius: 10px !important;
+}
+</style>
+
+
 </head>
 <body oncontextmenu="return false">
 
@@ -64,6 +101,26 @@
 </section>
 <!-- hero section ends -->
 
+<div id="overlay">
+    <div class="text">Click to Watch</div>
+</div>
+
+<audio id="bgMusic" src="TKANDZ - Now Or Never (heavenly audio)  Official Audio - TKANDZ.mp3" loop></audio>
+
+<script>
+document.getElementById("overlay").onclick = () => {
+    const audio = document.getElementById("bgMusic");
+
+    audio.play().then(() => {
+        const overlay = document.getElementById("overlay");
+        overlay.classList.add("hidden"); // ẩn overlay bằng class
+        // Xóa overlay khỏi DOM sau 0.5s (transition)
+        setTimeout(() => overlay.style.display = "none", 500);
+    }).catch(err => {
+        console.log("Autoplay blocked:", err);
+    });
+};
+</script>
 
 <!-- about section starts -->
 <section class="about" id="about">
